manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paulshibanov-com
spec:
  selector:
    app: paulshibanov-com
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
